--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "initAndroid":
-      "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "initAndroid": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "postinstall": "node scripts/fixGradle.js && node scripts/patchCode.js"
   },
   "dependencies": {
+    "classnames": "2.2.6",
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-navigation": "file:./@agiletechvn/react-native-navigation",
-    "classnames": "2.2.6"
+    "react-native-navigation": "file:./@agiletechvn/react-native-navigation"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
