--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:label="HomeActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.reactnativenavigation.controllers.ComponentActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
         <activity 
             android:name="com.reactnativenavigation.controllers.NavigationActivity"
